name:           imageboard
version:        0.1.0.0
homepage:       https://github.com/ecbambrick/imageboard/
category:       Application
synopsis:       Image board
description:    Simple tag-based image organization board.
author:         Cole Bambrick
maintainer:     cole.bambrick@gmail.com
build-type:     Simple
cabal-version:  >= 1.10

data-files:
    static/*.js
    static/*.css
    schema.sql
    app.cfg

executable imageboard
    main-is:            Main.hs
    hs-source-dirs:     src
    default-language:   Haskell2010

    other-modules:
        App.Core.Album,
        App.Core.Everything,
        App.Core.Image,
        App.Core.Scope,
        App.Core.Tag,
        App.Core.Types,
        App.Control,
        App.Config,
        App.Database,
        App.Expression,
        App.FileType,
        App.Import
        App.Path,
        App.Validation,
        App.Web.Element,
        App.Web.Route,
        App.Web.Server,
        App.Web.View,
        Data.Functor.Extended,
        Data.Ord.Extended,
        Data.DateTime,
        Data.Textual,
        Database.Engine,
        Database.Query,
        Database.Query.SQLite,
        Graphics.FFmpeg,
        System.IO.Metadata,
        Text.JavaScript,
        Web.Spock.Extended

    build-depends:
        base                    >= 4.8  && < 4.9,
        configurator            >= 0.3  && < 0.4,
        cryptohash              >= 0.11 && < 0.12,
        lucid                   >= 2.9  && < 2.10,
        network-uri             >= 2.6  && < 2.7,
        Spock                   >= 0.10 && < 0.11,
        sqlite-simple           >= 0.4  && < 0.5,
        time                    >= 1.5  && < 1.6,
        unordered-containers    >= 0.2  && < 0.3,
        wai-middleware-static   >= 0.8  && < 0.9,
        zip-archive             >= 0.2  && < 0.3,
        aeson,
        ArgumentParser,
        async,
        bytestring,
        deepseq,
        directory,
        filepath,
        http-types,
        HUnit,
        mtl,
        parsec,
        path-pieces,
        process,
        regex-compat,
        text,
        time,
        wai
